<resources>
    <string name="app_name">VentNote</string>

    <string name="fab">fab</string>
    <string name="title">VentNote</string>
    <string name="untitled">Untitled</string>

    <!--  Top Appbar Components  -->
    <string name="close_nav_icon">close nav icon</string>
    <string name="drawer_nav_icon">drawer nav icon</string>
    <string name="search_nav_icon">search nav icon</string>
    <string name="sort_nav_icon">sort nav icon</string>
...
    <!--  Label text  -->
    <string name="selected_text">Selected</string>
    <string name="note_detail">Note Detail</string>
    <string name="note_edit">Editing Note</string>
    <string name="add_new_note">Add New Note</string>
    <string name="share_preview">Share Preview</string>
    <string name="backup_notes">Backup Notes</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_title">Title</string>
    <string name="sort_modified_date">Modified Date</string>
    <string name="sort_created_date">Created Date</string>
    <string name="order_by">Order By</string>
    <string name="order_ascending">Ascending</string>
...
